--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -56,8 +56,9 @@ a {
 .page-header {
   color: #fff;
   text-align: center;
-  background-color: #159957;
-  background-image: linear-gradient(120deg, #155799, #159957); }
+  background-image: url(http://www.britishmuseum.org/images/special_exhibitions_624.jpg);
+  background-size: cover;
+  height: 15em;}
 
 @media screen and (min-width: 64em) {
   .page-header {
@@ -112,7 +113,7 @@ a {
   margin-top: 2rem;
   margin-bottom: 1rem;
   font-weight: normal;
-  color: #159957; }
+  color: #4B67C3 ; }
 .main-content p {
   margin-bottom: 1em; }
 .main-content code {
@@ -243,3 +244,13 @@ a {
 @media screen and (max-width: 42em) {
   .site-footer {
     font-size: 0.9rem; } }
+
+/* custom styles */
+
+#exhibit-image {
+  margin-top: 2em;
+  max-width: 20em;
+  width: 60%;
+}
+
+
